@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.15 2012/03/10 10:56:17 obache Exp $
+# $NetBSD: Makefile,v 1.16 2012/06/03 23:56:59 dholland Exp $
 #
 
 DISTNAME=	telepathy-mission-control-4.67
-PKGREVISION=	12
+PKGREVISION=	13
 CATEGORIES=	chat
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=mission-control/}
 
