@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.25 2012/05/10 04:43:53 dholland Exp $
+# $NetBSD: Makefile,v 1.26 2012/06/03 23:56:59 dholland Exp $
 #
 
 DISTNAME=		goffice-0.6.6
 PKGNAME=		goffice0.6-0.6.6
-PKGREVISION=		16
+PKGREVISION=		17
 CATEGORIES=		misc
 MASTER_SITES=		${MASTER_SITE_GNOME:=sources/goffice/0.6/}
 
