@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.28 2012/03/03 00:12:10 wiz Exp $
+# $NetBSD: Makefile,v 1.29 2012/06/03 23:56:59 dholland Exp $
 #
 
 DISTNAME=	libgnomecups-0.2.3
-PKGREVISION=	8
+PKGREVISION=	9
 CATEGORIES=	print gnome
 MASTER_SITES=	${MASTER_SITE_GNOME:=sources/libgnomecups/0.2/}
 
