@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.1870 2012/06/03 23:49:19 dholland Exp $
+$NetBSD: CHANGES-2012,v 1.1871 2012/06/03 23:56:58 dholland Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -2847,3 +2847,10 @@ Changes to the packages collection and infrastructure in 2012:
 	Updated time/py-mxDateTime to 3.2.4 [wiz 2012-06-03]
 	Updated comms/asterisk10 to 10.4.2 [jnemeth 2012-06-03]
 	Updated comms/asterisk18 to 1.8.12.2 [jnemeth 2012-06-03]
+	Updated audio/audacious to 1.5.1nb10 [dholland 2012-06-04]
+	Updated chat/telepathy-mission-control to 4.67nb13 [dholland 2012-06-04]
+	Updated converters/wv2 to 0.2.3nb9 [dholland 2012-06-04]
+	Updated mail/claws-mail-notification to 0.28nb4 [dholland 2012-06-04]
+	Updated misc/goffice0.6 to 0.6.6nb17 [dholland 2012-06-04]
+	Updated net/linc to 1.1.1nb10 [dholland 2012-06-04]
+	Updated print/libgnomecups to 0.2.3nb9 [dholland 2012-06-04]
